2005-03-15  Zoltan Varga  <vargaz@freemail.hu>

	* amd64/amd64-codegen.h (amd64_emit_rex): Emit a rex when accessing the
	byte registers.
	
	* amd64/amd64-codegen.h (AMD64_BYTE_REGS): Add AMD64_BYTE_REGS macro.

2005-03-14  Zoltan Varga  <vargaz@freemail.hu>

	* amd64/amd64-codegen.h: Add missing AMD64_XMM7.

2005-03-13  Zoltan Varga  <vargaz@freemail.hu>

	* amd64/amd64-codegen.h: Remove some unneccesary REXes.

2005-03-08  Zoltan Varga  <vargaz@freemail.hu>

	* amd64/amd64-codegen.h (amd64_sse_cvtsi2sd_reg_reg_size): Add _size
	variants to some sse2 macros.

	* amd64/amd64-codegen.h (amd64_sse_cvtsd2si_reg_reg): Make this convert
	to a 64 bit value.

2005-03-06  Zoltan Varga  <vargaz@freemail.hu>

	* amd64/amd64-codegen.h: Add some SSE2 instructions.

2005-02-20  Zoltan Varga  <vargaz@freemail.hu>

	* amd64/amd64-codegen.h: Add xadd instructions.
	
	* amd64/amd64-codegen.h (amd64_jump_code_size): Do not emit a rex.

2004-11-25  Zoltan Varga  <vargaz@freemail.hu>

	* amd64/amd64-codegen.h: Updates to support the PIC changes.

Fri Nov 19 17:29:22 CET 2004 Paolo Molaro <lupus@ximian.com>

	* ppc/ppc-codegen.h: counter reg decrement branch values
	(patch by Geoff Norton <gnorton@customerdna.com>).

2004-11-16  Patrik Torstensson <patrik.torstensson@gmail.com>

	* x86/x86-codegen.h: added opcodes for xadd instructions

2004-11-15  Zoltan Varga  <vargaz@freemail.hu>

	* amd64/x86-64-codegen.h: Get rid of this.

2004-08-30  Zoltan Varga  <vargaz@freemail.hu>

	* amd64/amd64-codegen.h (amd64_imul_reg_membase_size): Fix REX
	generation.

2004-08-29  Zoltan Varga  <vargaz@freemail.hu>

	* amd64/amd64-codegen.h: More SSE work.
	
	* amd64/amd64-codegen.h: Add SSE2 instructions.

2004-08-21  Zoltan Varga  <vargaz@freemail.hu>

	* amd64/amd64-codegen.h (X86_IS_BYTE_REG): Redefine X86_IS_BYTE_REG
	since under amd64, all 16 registers have a low part.

2004-08-16  Zoltan Varga  <vargaz@freemail.hu>

	* x86/x86-codegen.h: Add macros for accessing the mod/rm byte.
